--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,16 +1,21 @@
 .nav-clase{
     display: inline-block;
-    background-color: salmon;
+    background-color: #386150;
     color: #fff;
     padding: 10px 30px;
     text-decoration: none;
 }
 .nav-clase:hover{
-    background-color: rosybrown;
+    background-color: #58B09C;
 }
 nav{
-    background-color: rebeccapurple;
+    background-color: #386150;
     padding: 10px;
     display: flex;
     justify-content: space-around;
+}
+
+.imagenLogo{
+    width: 50px;
+    height: 50px;
 }
